cmake_minimum_required(VERSION 3.26)
project(zoo_cv_11)

set(CMAKE_CXX_STANDARD 17)

add_executable(zoo_cv_11 main.cpp
        Employee.cpp
        Employee.h
        Employee.h
        WorkState.h
        WorkState.h
        Manager.cpp
        Manager.h
        Programator.cpp
        Programator.h)
